# cli-mcp

./: AGENTS.md  README.md  brave_search_client.py  pyproject.toml  simple_client.py
src/mcp_client_cli/: cli.py
